k8s-flux/ai-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ai-agent
    app.kubernetes.io/name: ai-agent
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: ai-agent-0.1.0
  name: ai-agent
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.76.90
  clusterIPs:
  - 10.96.76.90
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8090
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app.kubernetes.io/instance: ai-agent
    app.kubernetes.io/name: ai-agent
  sessionAffinity: None
  type: ClusterIP
