k8s-flux/event-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: event-gateway
    app.kubernetes.io/name: event-gateway
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: event-gateway-0.1.0
  name: event-gateway
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.181.170
  clusterIPs:
  - 10.96.181.170
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8002
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app.kubernetes.io/instance: event-gateway
    app.kubernetes.io/name: event-gateway
  sessionAffinity: None
  type: ClusterIP
