k8s-flux/event-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: event-processor
    app.kubernetes.io/name: event-processor
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: event-processor-0.1.0
  name: event-processor
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.65.5
  clusterIPs:
  - 10.96.65.5
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8091
    port: 8091
    protocol: TCP
    targetPort: 8091
  selector:
    app.kubernetes.io/instance: event-processor
    app.kubernetes.io/name: event-processor
  sessionAffinity: None
  type: ClusterIP
