k8s-flux/fluvio-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fluvio-consumer
  name: fluvio-consumer
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.178.176
  clusterIPs:
  - 10.96.178.176
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8098
    port: 8098
    protocol: TCP
    targetPort: 8098
  selector:
    app.kubernetes.io/name: fluvio-consumer
  sessionAffinity: None
  type: ClusterIP
