k8s-flux/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: gateway-0.1.0
  name: gateway
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.117.163
  clusterIPs:
  - 10.96.117.163
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: gateway
    app.kubernetes.io/name: gateway
  sessionAffinity: None
  type: ClusterIP
