k8s-flux/hermes-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hermes-router
    app.kubernetes.io/name: hermes-router
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: hermes-router-0.1.0
  name: hermes-router
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.67.152
  clusterIPs:
  - 10.96.67.152
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8096
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app.kubernetes.io/instance: hermes-router
    app.kubernetes.io/name: hermes-router
  sessionAffinity: None
  type: ClusterIP
