k8s-flux/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  name: ollama
  namespace: ollama
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: port-11434
      port: 11434
      protocol: TCP
      targetPort: 11434
  selector:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  sessionAffinity: None
  type: ClusterIP
