k8s-flux/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: server
    app.kubernetes.io/name: server
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: server-0.1.0
  name: server
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.104.178
  clusterIPs:
  - 10.96.104.178
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: server
    app.kubernetes.io/name: server
  sessionAffinity: None
  type: ClusterIP
