k8s-flux/webhook-ingestor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: webhook-ingestor
    app.kubernetes.io/name: webhook-ingestor
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: webhook-ingestor-0.1.0
  name: webhook-ingestor
  namespace: whatsapp-commerce
spec:
  clusterIP: 10.96.179.75
  clusterIPs:
  - 10.96.179.75
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app.kubernetes.io/instance: webhook-ingestor
    app.kubernetes.io/name: webhook-ingestor
  sessionAffinity: None
  type: ClusterIP
